--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 </head>
 <body>
     <header>
-       <img class="imgheader" src="img/jumbo.png" alt="">
-       <div class="box1">
-         <img class="logo" src="img/logo.svg" alt="">
-         <div class="sezioni">Scarica</div> 
-         <div class="sezioni">Perchè Discord</div>
-         <div class="sezioni">Nitro</div>
-         <div class="sezioni">Sicurezza</div>
-         <div class="sezioni">Assistenza</div>
-         <button class="bott1">Accedi</button>
-       </div>
+        <div class="contenitore">
+            <div class="box1">
+                <img class="logo" src="img/logo.svg" alt="">
+                <nav>
+                   <a class="sezioni" href="https://discord.com/download">Scarica</a>
+                   <a class="sezioni" href="">Perchè Discord</a>
+                   <a class="sezioni" href="https://discord.com/nitro">Nitro</a>
+                   <a class="sezioni" href="https://discord.com/safety">Sicurezza</a>
+                   <a class="sezioni" href="https://support.discord.com/hc/it">Assistenza</a>
+                </nav>
+               <button class="login">Accedi</button>
+             </div>
+        </div>    
     </header>
-
+ 
     <main>
 
     </main>
