--- a/index.html
+++ b/index.html
@@ -24,11 +24,36 @@
                 </nav>
                <button class="login">Accedi</button>
              </div>
-        </div>    
+               
+             <div class="scritta">
+                <h2>Il tuo posto per parlare</h2>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, <br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, <br> Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p> 
+                <button class="scarica">&darr;Scarica per Mac</button>
+                <button class="nero">Apri Discord nel tuo browser</button>
+             </div>
+        </div>  
     </header>
  
     <main>
-       
+       <div class="box2">
+         <div class="figlio1"><img src="img/item1.svg" alt=""></div>
+         <div class="figlio2"><h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2> I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</div>
+       </div>
+
+       <div class="box3">
+        <div class="figlio2"><h2>Dove trovarsi è facile</h2>Mettiti comodo in un canale vocale quano hai tempo. Gli amici del tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</div>
+         <div class="figlio1"><img src="img/item2.svg" alt=""></div> 
+       </div>
+
+       <div class="box2">
+         <div class="figlio1"><img src="img/item3.svg" alt=""></div>
+         <div class="figlio2"><h2>Da pochi a un fandom</h2>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+       </div>
+
+       <div class="box3">
+         <div class="figlio2">Tecnologia affidabile per tenersi in contatto</div>
+         <div class="figlio1"><img src="img/item4-big.svg" alt=""></div>
+       </div>
     </main>
 
     <footer>
