--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
        <div class="box2">
          <div class="figlio1"><img src="img/item3.svg" alt=""></div>
-         <div class="figlio2"><h2>Da pochi a un fandom</h2>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+         <div class="figlio2"><h2>Da pochi a un fandom</h2>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro. </div>
        </div>
 
        <div class="box3">
-         <div class="figlio2">Tecnologia affidabile per tenersi in contatto</div>
+         <div class="figlio2"><h2>Tecnologia affidabile per tenersi in contatto</h2>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo</div>
          <div class="figlio1"><img src="img/item4-big.svg" alt=""></div>
        </div>
     </main>
